--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.3.1",
+    "@types/classnames": "^2.3.1",
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.20",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
+    "classnames": "^2.3.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.23.1",
     "eslint-config-next": "12.3.1",
