--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "stylelint:fix": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
