--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prepare": "husky install",
     "dev": "next dev",
+    "export": "next export",
     "debug": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
@@ -33,7 +33,6 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.23.1",
     "eslint-config-next": "12.3.1",
-    "husky": "^8.0.1",
     "typescript": "^4.8.3"
   }
 }
