--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 name: Publish Docker
 
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
   push:
     branches: [main]
@@ -14,6 +16,6 @@ jobs:
         with:
           registry: docker.pkg.github.com
           name: docker.pkg.github.com/oliolixinfree/top-application/top-application
-          username: ${{ secrects.DOCKER_USERNAME }}
-          password: ${{ secrects.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
           tags: 'develop'
